# Codex-Conversation-Lifecycle-Manager

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
docs/: ARCHITECTURE.md  CODEX_DESKTOP_TROUBLESHOOTING.md  HEALTH_REPORT.md  MANAGED_TAIL_REFRESH.md  RESEARCH_EVIDENCE.md  SKILLS_LIST_CACHE.md  UPSTREAM_FRONTEND_BLOCKER.md
src/: compact_image_fleet.rs  compact_images.rs  fixture.rs  inventory.rs  lib.rs  main.rs  migration.rs  model.rs  optimistic_resume.rs  oracle.rs  path_safety.rs  proxy.rs  runtime.rs  store.rs
tests/: Test-HealthReportContract.ps1  Test-PublicReleaseContract.ps1  Test-SkillsListCacheCanary.ps1  api_projection.rs  candidate.rs  checkpoint_scan.rs  compact_image_fleet.rs  compact_images.rs  indexed_runtime.rs  inventory.rs  optimistic_resume.rs  rehydration.rs
tools/: Build-PublicRelease.ps1  CLM.PathSafety.ps1  Get-CodexClmHealth.ps1
